package com.company;

public abstract class BangunRuang {
    private double volume;

    public abstract double hitungVolume();
}
