@startuml

title __COMPANY's Class Diagram__\n

  package com.company {
    abstract class BangunRuang {
        - volume : double
        {abstract} + hitungVolume()
    }
  }
  

  package com.company {
    class Bola {
        - r : double
        - volume : double
        + getR()
        + setR()
        + hitungVolume()
    }
  }
  

  package com.company {
    class Kerucut {
        - r : double
        - t : double
        - s : double
        - volume : double
        + getR()
        + setR()
        + getT()
        + setT()
        + hitungSisiSelimut()
        + hitungVolume()
    }
  }
  

  package com.company {
    class Main {
        {static} + main()
    }
  }
  

  package com.company {
    class Tabung {
        - r : double
        - h : double
        - volume : double
        + getR()
        + setR()
        + getH()
        + setH()
        + hitungVolume()
    }
  }
  

  Bola -up-|> BangunRuang
  Kerucut -up-|> BangunRuang
  Tabung -up-|> BangunRuang


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
